--- a/Bintangku.WebUI/client/src/app/contents/footer/footer.component.html
+++ b/Bintangku.WebUI/client/src/app/contents/footer/footer.component.html
@@ -1,9 +1,14 @@
-<footer class="w-full bg-blue-700 py-12">
+<footer class="w-full bg-blue-700 pb-12 pt-24">
   <div class="xl:container px-7 mx-auto">
-    <div class="flex">
-      <div class="w-2/4">
-        <div class="mb-8">
-          Bintangku
+    <div class="flex mb-9 text-white space-x-10">
+      <div class="max-w-sm mr-auto">
+        <div>
+          <h2 class="inline-flex items-center mat-h3">
+            <span class="inline-block rounded-full mr-4 bg-white w-11 h-11">
+
+            </span>
+            <span class="inline-block">Bintangku</span>
+          </h2>
         </div>
         <div class="mat-body">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus rutrum ut pulvinar ut urna, tortor amet,
@@ -18,26 +23,32 @@
           </a>
         </div>
       </div>
-      <div class="w-2/4">
-        <div class="flex">
-          <div class="w-2/4">
-            <h3 class="mat-h3">
-              Narahubung
-            </h3>
+      <div class="max-w-xs">
+        <h3 class="mat-h3">
+          Narahubung
+        </h3>
+        <div class="space-x-4 flex items-center mb-4 mat-body">
+          <div class="rounded-full inline-block w-9 h-9 bg-green-500">
+
           </div>
-          <div class="w-2/4">
-            <h3 class="mat-h3">
-              Lokasi
-            </h3>
-            <p class="mat-body">
-              Taman Surya 5 Ruko Avenue Blok KK1 No. 57, Cengkareng, Jakarta Barat 11730
-            </p>
+          <span class="inline-block">+6281219916720</span>
+        </div>
+        <div class="space-x-4 flex items-center mat-body">
+          <div class="rounded-full inline-block bg-blue-500 w-9 h-9">
+
           </div>
+          <span class="inline-block">contact@company.id</span>
         </div>
       </div>
+      <div class="max-w-xs">
+        <h3 class="mat-h3">
+          Lokasi
+        </h3>
+        <p class="mat-body">
+          Taman Surya 5 Ruko Avenue Blok KK1 No. 57, Cengkareng, Jakarta Barat 11730
+        </p>
+      </div>
     </div>
-
-
     <div class="text-center mat-body">
       <p class="text-gray-400">
         Copyright © 2021 by <span class="text-blue-500">Capella Project.</span> All Right Reserved
@@ -45,6 +56,3 @@
     </div>
   </div>
 </footer>
-<div class="bg-blue-800"></div>
-<div class="bg-blue-50"></div>
-<div class="bg-blue-400"></div>
