--- a/Bintangku.WebUI/client/src/app/contents/home/home.component.html
+++ b/Bintangku.WebUI/client/src/app/contents/home/home.component.html
@@ -1,157 +1,85 @@
-<div>
-  <!--  -->
-  <div class="background">
-    <img class="image" src="../../../assets/images/Img1.jpg" alt="" />
-    <h1 class="text-top-img font-weight-bold">Lorem Ipsum</h1>
+<div class="py-16 relative my-6">
+  <div class="absolute -right-7">
+    <svg width="436" height="271" viewBox="0 0 436 271" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path opacity="0.4"
+        d="M35.1005 1C10.7458 30.0717 -15.0585 84.8493 13.6553 119.912C25.0998 133.887 38.3939 143.94 57.2315 141.561C76.9496 139.07 97.0704 123.333 104.798 104.814C110.987 89.9806 88.3482 93.6222 81.6068 97.5771C74.9808 101.464 73.8733 107.747 76.3078 113.049C79.9953 121.081 85.8022 131.135 95.5711 131.267C109.334 131.453 119.602 128.127 131.542 121.098C149.329 110.626 165.452 99.2527 185.092 92.2117C194.142 88.9676 204.021 85.117 213.645 83.9765C220.679 83.1428 226.38 86.5121 232.409 89.529C252.726 99.6953 250.101 129.225 252.67 148.736C259.193 198.286 284.51 254.506 337.329 267.273C358.129 272.302 381.825 270.309 401.353 261.846C411.144 257.602 419.316 252.072 426.601 244.252C433.682 236.65 438.085 231.174 443.994 222.167C453.999 206.915 458.611 191.37 466 175.063"
+        stroke="#66CBFF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+    </svg>
   </div>
-  <!--  -->
-  <!-- Tentang Kami -->
-  <div class="container">
-    <div class="row m-bottom">
-      <div class="col-6">
-        <img class="img-anak" src="../../../assets/images/Img2.jpg" alt="" />
+  <section id="hero-component" class="my-6 relative py-16">
+    <div class="xl:container mx-auto py-7 my-16 px-7">
+      <div class="max-w-sm mr-auto">
+        <h1 class="mat-headline">
+          Menjadikan Indonesia <span class="font-bold text-blue-700">Sehat</span>
+        </h1>
+        <div class="mat-body">
+          <p class="text-opacity-60">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Semper nulla duis eu gravida augue massa nibh.
+          </p>
+        </div>
       </div>
-      <div class="col-6">
-        <h2 class="font-weight-bold">Tentang Kami</h2>
-        <h2 class="txt">Lorem Ipsum</h2>
-        <h2>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis libero
-          tenetur, expedita tempore quis minima ducimus magnam vel quo eum eos
-          delectus cupiditate eius aliquam earum, officia iure dicta aspernatur!
+      <div class="flex relative justify-between">
+        <div class="inline-flex items-center flex-col">
+          <div class="w-0.5 bg-blue-500 h-24"></div>
+          <button mat-fab color="primary" title="Lihat Lebih Lanjut" aria-label="Lihat Lebih Lanjut">
+            <mat-icon>arrow_downward</mat-icon>
+          </button>
+        </div>
+        <div class="inline-flex">
+          <div class="flex absolute right-0" style="top: -88px;">
+            <div class="pt-11 mr-3 self-start">
+              <div class="rounded-xl mt-11 bg-yellow-400" style="width:259px;height:190px;">
+
+              </div>
+            </div>
+            <div class="rounded-xl mr-3 bg-green-300" style="width:170px;height:239px;">
+
+            </div>
+            <div class="pt-11 mr-3 self-start">
+              <div class="rounded-xl mt-11 bg-green-700" style="width:167px;height:244px;">
+
+              </div>
+            </div>
+            <div class="pt-11 self-start">
+              <div class="rounded-xl mt-11 bg-blue-300" style="width:261px;height:153px;">
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="absolute bottom-0">
+      <svg width="418" height="124" viewBox="0 0 418 124" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path opacity="0.4"
+          d="M0 94.1845C12.1362 91.9634 23.9843 90.2747 36.0564 93.7923C47.5752 97.1486 57.042 103.689 67.584 108.735C87.3037 118.174 116.738 130.817 137.781 116.657C148.075 109.73 154.928 97.3909 155.548 85.87C156.301 71.8798 145.013 65.028 130.552 65.8683C116.368 66.6925 103.431 78.5401 102.247 91.047C101.748 96.3208 104.213 102.787 107.995 106.813C114.199 113.417 129.131 110.175 136.692 107.48C145.345 104.395 152.16 98.4252 158.814 92.8118C170.297 83.124 186.21 78.2524 200.618 73.2023C214.758 68.246 228.928 63.2973 243.86 60.613C255.304 58.5555 267.464 56.6815 279.176 57.6715C292.888 58.8307 305.811 63.3319 318.672 67.4371C336.174 73.0235 352.816 75.5597 370.231 67.2018C382.687 61.224 391.773 51.1209 399.102 40.5328C402.096 36.2087 404.854 31.738 407.246 27.1199C419.628 3.20722 407.062 24.1899 417 1"
+          stroke="#66CBFF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+      </svg>
+    </div>
+  </section>
+  <section id="visi-misi" class="my-6 py-16">
+    <div class="xl:container mx-auto py-7 my-16 px-7">
+      <p class="mat-body accent-heading">Tentang Kami</p>
+      <div class="relative">
+        <h2 class="w-64 mat-headline">
+          Demi Anak Bangsa yang Lebih Baik
         </h2>
+        <div class="misi-content">
+          <p class="mat-body text-justify opacity-60">
+            Dalam era globalisasi dan kemajuan teknologi yang semakin baik, diperlukan sebuah usaha untuk meningkatkan
+            pemantauan tumbuh kembang, nutrisi, dan imunisasi anak sehingga pelayanan kesehatan dapat maksimal. Kami
+            melakukan pengembangan website dan aplikasi Android yang komprehensif dan mudah digunakan untuk membantu
+            tenaga medis dan non medis dalam melakukan input dan analisa data kesehatan anak suatu komunitas (posyandu,
+            puskesmas, atau day care) di seluruh Indonesia, sehingga setiap anak dapat dipantau dengan mudah dan baik.
+          </p>
+        </div>
+        <div class="misi-img bg-red-400"></div>
       </div>
     </div>
-  </div>
-  <!-- End - Tentang Kami -->
-  <!-- Misi Kami -->
-  <div class="container">
-    <div class="row m-bottom">
-      <div class="col-6">
-        <h2 class="font-weight-bold">Misi Kami</h2>
-        <h2 class="txt">Lorem Ipsum</h2>
-        <h2>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis libero
-          tenetur, expedita tempore quis minima ducimus magnam vel quo eum eos
-          delectus cupiditate eius aliquam earum, officia iure dicta aspernatur!
-        </h2>
-      </div>
-      <div class="col-6">
-        <img class="img-misi" src="../../../assets/images/Img3.jpg" alt="" />
-      </div>
+  </section>
+  <section id="layanan-kami" class="my-6 py-16">
+    <div class="xl:container mx-auto rounded-xl bg-blue-100 bg-opacity-20 border border-solid border-blue-100 py-7 my-16 px-7">
+
     </div>
-  </div>
-  <!-- End - Misi Kami -->
-  <!-- What We Do -->
-  <div class="container">
-    <h1 class="text-center font-weight-bold mb-5">What We Do</h1>
-    <div class="row m-bottom">
-      <div class="col-4">
-        <div class="card bg-custom">
-          <div class="card-body">
-            <div class="container">
-              <img
-                class="mx-auto d-block my-4"
-                style="width: 30%"
-                src="../../../assets/images/bar-chart.png"
-                alt=""
-              />
-              <p class="text-white">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae
-                eum illum, totam sequi deleniti doloremque sed voluptas rem ad,
-                vitae reiciendis, beatae distinctio deserunt. Numquam cum eos et
-                accusantium doloremque.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-4">
-        <div class="card bg-custom">
-          <div class="card-body">
-            <div class="container">
-              <img
-                class="mx-auto d-block my-4"
-                style="width: 30%"
-                src="../../../assets/images/document.png"
-                alt=""
-              />
-              <p class="text-white">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae
-                eum illum, totam sequi deleniti doloremque sed voluptas rem ad,
-                vitae reiciendis, beatae distinctio deserunt. Numquam cum eos et
-                accusantium doloremque.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-4">
-        <div class="card bg-custom">
-          <div class="card-body">
-            <div class="container">
-              <img
-                class="mx-auto d-block my-4"
-                style="width: 30%"
-                src="../../../assets/images/stethoscope.png"
-                alt=""
-              />
-              <p class="text-white">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae
-                eum illum, totam sequi deleniti doloremque sed voluptas rem ad,
-                vitae reiciendis, beatae distinctio deserunt. Numquam cum eos et
-                accusantium doloremque.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- End - What We Do -->
-  <!-- Tim Kami -->
-  <div class="container">
-    <h1 class="text-center font-weight-bold mb-5">Tim Kami</h1>
-    <div class="row mb-5">
-      <div class="col-4">
-        <div class="card">
-          <img
-            class="card-img-top"
-            src="../../../assets/images/dokter.jpeg"
-            alt="Card image cap"
-          />
-          <div class="card-body">
-            <h1 class="card-title">Nama</h1>
-            <p class="card-text">Deskripsi</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-4">
-        <div class="card">
-          <img
-            class="card-img-top"
-            src="../../../assets/images/dokter.jpeg"
-            alt="Card image cap"
-          />
-          <div class="card-body">
-            <h1 class="card-title">Nama</h1>
-            <p class="card-text">Deskripsi</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-4">
-        <div class="card">
-          <img
-            class="card-img-top"
-            src="../../../assets/images/dokter.jpeg"
-            alt="Card image cap"
-          />
-          <div class="card-body">
-            <h1 class="card-title">Nama</h1>
-            <p class="card-text">Deskripsi</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- End - Tim Kami -->
+  </section>
 </div>
