--- a/Bintangku.WebUI/client/src/styles.scss
+++ b/Bintangku.WebUI/client/src/styles.scss
@@ -1,4 +1,3 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '~@angular/material' as mat;
@@ -14,7 +13,6 @@
 $light-primary-text: white;
 $dark-primary-text: rgba(black, 0.87);
 
-
 $light-blue-palette-custom: (
   50: #e1f5fe,
   100: #b3e5fc,
@@ -25,10 +23,10 @@ $light-blue-palette-custom: (
   600: #039be5,
   700: #0288d1,
   800: #003466,
-  900: #06275D,
-  A100: #66CBFF,
-  A200: #32CCFE,
-  A400: #5D9FE2,
+  900: #06275d,
+  A100: #66cbff,
+  A200: #32ccfe,
+  A400: #5d9fe2,
   A700: #0091ea,
   contrast: (
     50: $dark-primary-text,
@@ -45,33 +43,51 @@ $light-blue-palette-custom: (
     A200: $dark-primary-text,
     A400: $light-primary-text,
     A700: $light-primary-text,
-  )
+  ),
 );
-$client-primary: mat.define-palette($light-blue-palette-custom, A400, A100, 800);
+$client-primary: mat.define-palette(
+  $light-blue-palette-custom,
+  A400,
+  A100,
+  800
+);
 $client-accent: mat.define-palette($light-blue-palette-custom, A100, 100, A400);
 
 // The warn palette is optional (defaults to red).
 $client-warn: mat.define-palette(mat.$red-palette);
 
 $custom-typograpy: mat.define-typography-config(
-  $font-family: 'Oxygen, sans-serif',
-  $headline: mat.define-typography-level(42px, 48.3px, 400, 'Oxygen, sans-serif'),
-  $title: mat.define-typography-level(32px, 36.8px , 400, 'Oxygen, sans-serif'),
-  $subheading-2: mat.define-typography-level(24px, 27.6px , 400,'Oxygen, sans-serif'),
-  $subheading-1: mat.define-typography-level(18px, 20.7px , 400, 'Oxygen, sans-serif'),
-  $body-1: mat.define-typography-level(14.5px, 21.75px , 400, 'Oxygen, sans-serif', 0.02em),
-  $button: mat.define-typography-level(13.5px, 17.05px , 400, 'Oxygen, sans-serif')
+  $font-family: "Oxygen, sans-serif",
+  $headline:
+    mat.define-typography-level(42px, 48.3px, 400, "Oxygen, sans-serif"),
+  $title: mat.define-typography-level(32px, 36.8px, 400, "Oxygen, sans-serif"),
+  $subheading-2:
+    mat.define-typography-level(24px, 27.6px, 400, "Oxygen, sans-serif"),
+  $subheading-1:
+    mat.define-typography-level(18px, 20.7px, 400, "Oxygen, sans-serif"),
+  $body-1:
+    mat.define-typography-level(
+      14.5px,
+      21.75px,
+      400,
+      "Oxygen, sans-serif",
+      0.02em
+    ),
+  $button:
+    mat.define-typography-level(13.5px, 17.05px, 400, "Oxygen, sans-serif"),
 );
 @include mat.core($custom-typograpy);
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$client-theme: mat.define-light-theme((
-  color: (
-    primary: $client-primary,
-    accent: $client-accent,
-    warn: $client-warn,
+$client-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $client-primary,
+      accent: $client-accent,
+      warn: $client-warn,
+    ),
   )
-));
+);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -82,19 +98,24 @@ $client-theme: mat.define-light-theme((
 // @import "~bootstrap/scss/bootstrap.scss";
 @import "~ngx-toastr/toastr.css";
 // "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              // "./node_modules/bootstrap/dist/css/bootstrap.min.css",
-              // "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
-              // "./node_modules/bootstrap/dist/css/bootstrap.css",
-              // "./node_modules/bootstrap/dist/js/bootstrap.js",
-              // "./node_modules/font-awesome/css/font-awesome.css",
+// "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+// "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
+// "./node_modules/bootstrap/dist/css/bootstrap.css",
+// "./node_modules/bootstrap/dist/js/bootstrap.js",
+// "./node_modules/font-awesome/css/font-awesome.css",
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
-html, body { height: 100%; }
+html,
+body {
+  height: 100%;
+}
 body {
   margin: 0;
-  font-family: 'Oxygen', sans-serif;
-  background-color: #E5E5E5;
+  font-family: "Oxygen", sans-serif;
+  background-color: #fafafa;
+  & button:focus {
+    outline: none;
+  }
 }
