--- a/Bintangku.WebUI/client/src/app/contents/home/home.component.html
+++ b/Bintangku.WebUI/client/src/app/contents/home/home.component.html
@@ -78,8 +78,31 @@
     </div>
   </section>
   <section id="layanan-kami" class="my-6 py-16">
-    <div class="xl:container mx-auto rounded-xl bg-blue-100 bg-opacity-20 border border-solid border-blue-100 py-7 my-16 px-7">
+    <div
+      class="xl:container mx-auto rounded-xl bg-blue-100 bg-opacity-20 border border-solid border-blue-100 py-7 my-16 px-7">
+      <div class="flex flex-wrap space-x-7 w-2/3">
+        <div app-grid [container]="true" spacing="4">
+          <div app-grid [item]="true" xs="6" *ngFor="let item of [1,2,3,4]">
+          <div class="flex">
+            <div class="rounded-xl flex-1 w-full h-20 border border-solid border-blue-100">
+              <div class="w-20"></div>
+            </div>
+            <div class="pl-7">
+              <div class="mat-typography">
+                <h3 class="text-blue-700 font-bold">
+                  Cara {{item}}
+                </h3>
+                <p class="opacity-60 text-justify">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cursus odio a nulla tristique lacus. Quam
+                  dignissim vel, senectus quis amet ante nisl felis, purus.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        </div>
 
+      </div>
     </div>
   </section>
 </div>
