--- a/Bintangku.WebUI/client/src/app/contents/home/home.component.html
+++ b/Bintangku.WebUI/client/src/app/contents/home/home.component.html
@@ -1,11 +1,4 @@
-<div class="py-16 relative my-6">
-  <div class="absolute -right-7">
-    <svg width="436" height="271" viewBox="0 0 436 271" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path opacity="0.4"
-        d="M35.1005 1C10.7458 30.0717 -15.0585 84.8493 13.6553 119.912C25.0998 133.887 38.3939 143.94 57.2315 141.561C76.9496 139.07 97.0704 123.333 104.798 104.814C110.987 89.9806 88.3482 93.6222 81.6068 97.5771C74.9808 101.464 73.8733 107.747 76.3078 113.049C79.9953 121.081 85.8022 131.135 95.5711 131.267C109.334 131.453 119.602 128.127 131.542 121.098C149.329 110.626 165.452 99.2527 185.092 92.2117C194.142 88.9676 204.021 85.117 213.645 83.9765C220.679 83.1428 226.38 86.5121 232.409 89.529C252.726 99.6953 250.101 129.225 252.67 148.736C259.193 198.286 284.51 254.506 337.329 267.273C358.129 272.302 381.825 270.309 401.353 261.846C411.144 257.602 419.316 252.072 426.601 244.252C433.682 236.65 438.085 231.174 443.994 222.167C453.999 206.915 458.611 191.37 466 175.063"
-        stroke="#66CBFF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-    </svg>
-  </div>
+<div class="py-16 my-6">
   <section id="hero-component" class="my-6 relative py-16">
     <div class="xl:container mx-auto py-7 my-16 px-7">
       <div class="max-w-sm mr-auto">
@@ -13,7 +6,7 @@
           Menjadikan Indonesia <span class="font-bold text-blue-700">Sehat</span>
         </h1>
         <div class="mat-body">
-          <p class="text-opacity-60">
+          <p class="opacity-60">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Semper nulla duis eu gravida augue massa nibh.
           </p>
         </div>
@@ -57,9 +50,9 @@
       </svg>
     </div>
   </section>
-  <section id="visi-misi" class="my-6 py-16">
+  <section id="visi-kami" class="my-6 py-16">
     <div class="xl:container mx-auto py-7 my-16 px-7">
-      <p class="mat-body accent-heading">Tentang Kami</p>
+      <p class="mat-body accent-heading">Visi Kami</p>
       <div class="relative">
         <h2 class="w-64 mat-headline">
           Demi Anak Bangsa yang Lebih Baik
@@ -80,28 +73,85 @@
   <section id="layanan-kami" class="my-6 py-16">
     <div
       class="xl:container mx-auto rounded-xl bg-blue-100 bg-opacity-20 border border-solid border-blue-100 py-7 my-16 px-7">
-      <div class="flex flex-wrap space-x-7 w-2/3">
-        <div app-grid [container]="true" spacing="4">
-          <div app-grid [item]="true" xs="6" *ngFor="let item of [1,2,3,4]">
-          <div class="flex">
-            <div class="rounded-xl flex-1 w-full h-20 border border-solid border-blue-100">
-              <div class="w-20"></div>
-            </div>
-            <div class="pl-7">
-              <div class="mat-typography">
-                <h3 class="text-blue-700 font-bold">
-                  Cara {{item}}
-                </h3>
-                <p class="opacity-60 text-justify">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cursus odio a nulla tristique lacus. Quam
-                  dignissim vel, senectus quis amet ante nisl felis, purus.
-                </p>
+      <div class="flex justify-end">
+        <p class="mat-body accent-heading">Layanan Kami</p>
+      </div>
+      <div class="flex">
+        <div class="w-2/3">
+          <div app-grid [container]="true" spacing="4">
+            <div app-grid [item]="true" xs="6" *ngFor="let item of [1,2,3,4]">
+              <div class="flex">
+                <div class="rounded-xl flex-1 w-full h-20 border border-solid border-blue-100">
+                  <div class="w-20"></div>
+                </div>
+                <div class="pl-7">
+                  <div class="mat-typography">
+                    <h3 class="text-blue-700 font-bold">
+                      Cara {{item}}
+                    </h3>
+                    <p class="opacity-60 text-justify">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cursus odio a nulla tristique lacus. Quam
+                      dignissim vel, senectus quis amet ante nisl felis, purus.
+                    </p>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
+        <div class="w-1/3">
+          <h2 class="w-64 ml-auto mat-headline">
+            Bagaimana kami bekerja?
+          </h2>
         </div>
+      </div>
+    </div>
+  </section>
+  <section id="tentang-kami" class="my-6 py-16">
+    <div class="xl:container mx-auto py-7 my-16 px-7">
+      <p class="mat-body accent-heading">Tentang Kami</p>
+      <h2 class="w-64 mat-headline">
+        Dirancang dengan penuh dedikasi
+      </h2>
+      <p class="mat-body opacity-60">Temui tim hebat dibalik Bintangku</p>
+    </div>
+  </section>
+  <section id="ayo-gabung" class="my-6 py-16">
+    <div
+      class="xl:container bg-blue-100 relative bg-opacity-20 border border-solid border-blue-100 rounded-xl bg- mx-auto py-12 px-12">
+      <div app-grid container="true">
+        <div app-grid class="mat-typography" item="true" xs="4">
+          <h2 class="mat-headline">
+            Ayo, wujudkan <br> Indonesia Sehat
+          </h2>
+          <p class="opacity-60">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Senectus posuere id eu id ornare purus egestas
+            malesuada quis. Praesent purus rhoncus turpis enim, nibh orci at scelerisque enim.
+          </p>
+          <a [routerLink]="['/register']" mat-raised-button color="primary" class="btn-auth"
+            routerLinkActive="router-link-active">
+            gabung sekarang
+          </a>
+          <p></p>
+          <p>
+            Sudah bergabung? <a class="text-blue-500 hover:text-blue-700" [routerLink]="['/login']">Login</a>
+          </p>
+        </div>
+        <div app-grid item="true" xs="2">
+          <div class="absolute top-0">
+            <svg width="299" height="336" viewBox="0 0 299 336" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path opacity="0.5"
+                d="M41.859 1C14.7858 40.1757 -2.73023 83.5594 1.67785 126.474C3.66011 145.773 17.4429 167.922 44.675 178.988C64.3491 186.982 81.5688 185.098 101.427 177.859C123.045 169.979 144.035 160.134 162.078 149.378C168.039 145.825 174.555 141.569 174.208 136.034C173.788 129.347 164.868 128.006 157.529 132.25C141.737 141.382 132.767 158.587 134.893 171.618C138.354 192.832 159.607 211.809 183.955 226.323C204.445 238.536 231.173 246.318 249.372 260.048C262.063 269.623 270.335 289.527 265.184 301.913C260.141 314.04 247.102 328.736 226.086 332.717C212.294 335.33 195.002 336.163 189.371 332.717C181.347 327.807 177.962 318.311 189.371 310.61C205.749 299.554 226.877 291.431 246.881 283.125C270.087 273.489 279.302 254.686 287.495 238.073C295.081 222.693 299.405 211.658 297.586 192.737"
+                stroke="#66CBFF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+          </div>
 
+        </div>
+        <div app-grid item="true" xs="3">
+          <div style="width: 412px; top: -119px; height: 312px;" class="rounded-xl absolute bg-blue-100">
+
+          </div>
+        </div>
       </div>
     </div>
   </section>
