--- a/Bintangku.WebUI/client/src/app/contents/home/home.component.html
+++ b/Bintangku.WebUI/client/src/app/contents/home/home.component.html
@@ -21,21 +21,21 @@
         <div class="inline-flex">
           <div class="flex absolute right-0" style="top: -88px;">
             <div class="pt-11 mr-3 self-start">
-              <div class="rounded-xl mt-11 bg-yellow-400" style="width:259px;height:190px;">
-
+              <div class="rounded-xl mt-11 overflow-hidden flex bg-yellow-400" style="width:259px;height:190px;">
+                <img src="/assets/images/home-img-2.jpg" alt="">
               </div>
             </div>
-            <div class="rounded-xl mr-3 bg-green-300" style="width:170px;height:239px;">
-
+            <div class="rounded-xl mr-3 overflow-hidden bg-green-300" style="width:170px;height:239px;">
+              <img src="/assets/images/home-img-3.jpg" alt="">
             </div>
             <div class="pt-11 mr-3 self-start">
-              <div class="rounded-xl mt-11 bg-green-700" style="width:167px;height:244px;">
-
+              <div class="rounded-xl mt-11 overflow-hidden flex bg-green-700" style="width:167px;height:244px;">
+                <img src="/assets/images/home-img-4.jpg" alt="">
               </div>
             </div>
             <div class="pt-11 self-start">
-              <div class="rounded-xl mt-11 bg-blue-300" style="width:261px;height:153px;">
-
+              <div class="rounded-xl mt-11 overflow-hidden bg-blue-300" style="width:261px;height:153px;">
+                <img src="/assets/images/home-img-7.jpg" alt="">
               </div>
             </div>
           </div>
@@ -66,7 +66,9 @@
             puskesmas, atau day care) di seluruh Indonesia, sehingga setiap anak dapat dipantau dengan mudah dan baik.
           </p>
         </div>
-        <div class="misi-img bg-red-400"></div>
+        <div class="misi-img bg-red-400 overflow-hidden">
+          <img src="/assets/images/home-img-5.jpg" alt="">
+        </div>
       </div>
     </div>
   </section>
@@ -110,10 +112,46 @@
   <section id="tentang-kami" class="my-6 py-16">
     <div class="xl:container mx-auto py-7 my-16 px-7">
       <p class="mat-body accent-heading">Tentang Kami</p>
-      <h2 class="w-64 mat-headline">
-        Dirancang dengan penuh dedikasi
-      </h2>
-      <p class="mat-body opacity-60">Temui tim hebat dibalik Bintangku</p>
+      <div app-grid container="true" spacing="3">
+        <div app-grid item="true" md="true">
+          <h2 class="w-64 mat-headline">
+            Dirancang dengan penuh dedikasi
+          </h2>
+          <p class="mat-body opacity-60">Temui tim hebat dibalik Bintangku</p>
+        </div>
+        <div app-grid item="true" md="8">
+          <div app-grid container="true" spacing="3">
+            <div app-grid item="true" md="3">
+              <div class="overflow-hidden mb-3 hover:shadow-md hover:scale-105 transform transition rounded-xl">
+                <img src="/assets/images/home-img-8.jpg" alt="">
+              </div>
+              <p class="text-blue-500 mat-body font-bold capitalize">nama lengkap</p>
+              <p class="mat-body opacity-60 capitalize">nama jabata</p>
+            </div>
+            <div app-grid item="true" md="3">
+              <div class="overflow-hidden mb-3 hover:shadow-md hover:scale-105 transform transition max-h-44 rounded-xl">
+                <img style="margin-top: -55px;" src="/assets/images/home-img-6.jpg" alt="">
+              </div>
+              <p class="text-blue-500 mat-body font-bold capitalize">nama lengkap</p>
+              <p class="mat-body opacity-60 capitalize">nama jabata</p>
+            </div>
+            <div app-grid item="true" md="3">
+              <div class="overflow-hidden mb-3 hover:shadow-md hover:scale-105 transform transition rounded-xl">
+                <img src="/assets/images/home-img-10.jpg" alt="">
+              </div>
+              <p class="text-blue-500 mat-body font-bold capitalize">nama lengkap</p>
+              <p class="mat-body opacity-60 capitalize">nama jabata</p>
+            </div>
+            <div app-grid item="true" md="3">
+              <div class="overflow-hidden mb-3 hover:shadow-md hover:scale-105 transform transition rounded-xl">
+                <img src="/assets/images/home-img-9.jpg" alt="">
+              </div>
+              <p class="text-blue-500 mat-body font-bold capitalize">nama lengkap</p>
+              <p class="mat-body opacity-60 capitalize">nama jabata</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
   <section id="ayo-gabung" class="my-6 py-16">
@@ -148,9 +186,7 @@
 
         </div>
         <div app-grid item="true" xs="3">
-          <div style="width: 412px; top: -119px; height: 312px;" class="rounded-xl absolute bg-blue-100">
-
-          </div>
+          <img src="/assets/images/home-img-1.jpg" style="width: 412px; top: -119px; height: 312px;" class="rounded-xl overflow-hidden absolute bg-blue-100">
         </div>
       </div>
     </div>
