--- a/Bintangku.WebUI/client/src/app/contents/account/login/login.component.html
+++ b/Bintangku.WebUI/client/src/app/contents/account/login/login.component.html
@@ -1,68 +1,39 @@
-<mat-card>
-  <div class="text-center mb-5">
-    <img
-      src="../../../assets/images/logo.png"
-      width="100"
-      height="100"
-      alt=""
-      loading="lazy"
-    />
-  </div>
-  <h1>Login</h1>
-  <form
-    class="login-form"
-    [formGroup]="form"
-    (ngSubmit)="login()"
-    autocomplete="off"
-  >
-    <!-- Email Field -->
-    <mat-form-field class="login-full-width">
-      <mat-label>Username</mat-label>
-      <input
-        formControlName="username"
-        type="text"
-        name="username"
-        matInput
-        placeholder="Ex. nakesuser"
-      />
-      <mat-error
-        *ngIf="
+<div app-grid class="h-screen" container="true" justify="center" alignItems="center">
+  <div app-grid item="true" xs="4">
+    <form class="login-form" [formGroup]="form" (ngSubmit)="login()" autocomplete="off">
+      <!-- Email Field -->
+      <mat-form-field class="login-full-width">
+        <mat-label>Username</mat-label>
+        <input formControlName="username" type="text" name="username" matInput placeholder="Ex. nakesuser" />
+        <mat-error *ngIf="
           emailFormControl.hasError('email') &&
           !emailFormControl.hasError('required')
-        "
-      >
-        Please enter a valid email address
-      </mat-error>
-      <mat-error *ngIf="emailFormControl.hasError('required')">
-        Email is <strong>required</strong>
-      </mat-error>
-    </mat-form-field>
-    <!-- End - Email Field -->
+        ">
+          Please enter a valid email address
+        </mat-error>
+        <mat-error *ngIf="emailFormControl.hasError('required')">
+          Email is <strong>required</strong>
+        </mat-error>
+      </mat-form-field>
+      <!-- End - Email Field -->
 
-    <!-- Password Field -->
-    <mat-form-field class="login-full-width">
-      <mat-label>Password</mat-label>
-      <input
-        formControlName="password"
-        name="password"
-        type="password"
-        matInput
-        placeholder="Password"
-      />
-      <mat-error
-        *ngIf="
+      <!-- Password Field -->
+      <mat-form-field class="login-full-width">
+        <mat-label>Password</mat-label>
+        <input formControlName="password" name="password" type="password" matInput placeholder="Password" />
+        <mat-error *ngIf="
           emailFormControl.hasError('email') &&
           !emailFormControl.hasError('required')
-        "
-      >
-        Please enter a valid password
-      </mat-error>
-      <mat-error *ngIf="emailFormControl.hasError('required')">
-        Password is <strong>required</strong>
-      </mat-error>
-    </mat-form-field>
-    <!-- End - Password Field -->
-    <!-- Submit Button -->
-    <button type="submit" mat-raised-button color="primary">Login</button>
-  </form>
-</mat-card>
+        ">
+          Please enter a valid password
+        </mat-error>
+        <mat-error *ngIf="emailFormControl.hasError('required')">
+          Password is <strong>required</strong>
+        </mat-error>
+      </mat-form-field>
+      <!-- End - Password Field -->
+      <!-- Submit Button -->
+      <button type="submit" mat-raised-button color="primary">Login</button>
+    </form>
+  </div>
+</div>
