--- a/Bintangku.WebUI/client/src/app/layout/layout.component.html
+++ b/Bintangku.WebUI/client/src/app/layout/layout.component.html
@@ -6,7 +6,7 @@
         stroke="#66CBFF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
     </svg>
   </div>
-  <app-header class="my-header"></app-header>
+  <app-header></app-header>
   <ng-content></ng-content>
 </div>
 <app-footer></app-footer>
