--- a/Bintangku.WebUI/client/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/Bintangku.WebUI/client/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -1,4 +1,8 @@
-<mat-nav-list>
+<div class=""></div>
+
+
+
+<!-- <mat-nav-list>
   <a mat-list-item routerLink="/home" (click)="onSidenavClose()">
     <mat-icon>home</mat-icon> <span class="nav-caption">Home</span>
   </a>
@@ -22,4 +26,4 @@
       ><span class="nav-caption">Data Anak</span>
     </a>
   </div>
-</mat-nav-list>
+</mat-nav-list> -->
