component:list member nakes

--- a/Bintangku.WebUI/client/src/app/contents/home/home.component.html
+++ b/Bintangku.WebUI/client/src/app/contents/home/home.component.html
@@ -1,3 +1,8 @@
+<div class="row">
+  <div class="col-sm-8">
+
+  </div>
+</div>
 <div class="py-16 my-6">
   <section id="hero-component" class="my-6 relative py-16">
     <div class="xl:container mx-auto py-7 my-16 px-7">
