--- a/Bintangku.WebUI/client/src/app/navigation/header/header.component.html
+++ b/Bintangku.WebUI/client/src/app/navigation/header/header.component.html
@@ -1,17 +1,36 @@
 <div class="fixed flex right-0 left-0 z-50 top-6">
   <div class="xl:container mx-auto space-x-6 flex items-center">
-    <div *ngIf="accountService.currentUser$ | async" [@flyInOut]="'in'"
+    <!-- <div *ngIf="accountService.currentUser$ | async" [@flyInOut]="'in'"
       class="rounded-xl shadow-xl px-2 flex items-center bg-white h-16 w-16">
       <button mat-icon-button color="primary">
         <mat-icon class="menu">subject</mat-icon>
       </button>
-    </div>
+    </div> -->
     <div class="flex container rounded-xl px-7 h-16 bg-white shadow-xl items-center justify-between">
       <div class="flex space-x-2 items-center">
         <img src="/assets/images/logo.png" class="rounded-full w-9 h-9">
         <h1 class="text-blue-700 text-xl m-0 font-bold"> Bintangku</h1>
       </div>
-      <div class="hidden md:block md:space-x-8">
+      <div *ngIf="accountService.currentUser$ | async" class="hidden md:block md:space-x-8">
+        <a [routerLink]="['/home']" routerLinkActive="active"
+           class="font-medium text-gray-500 hover:text-blue-700">
+            Beranda
+        </a>
+        <a routerLink="/admin" routerLinkActive="active"
+            *appHasRole="['Admin']"
+            class="font-medium text-gray-500 hover:text-blue-700">
+            Admin
+        </a>
+        <a routerLink="/nakes-members" routerLinkActive="active"
+           class="font-medium text-gray-500 hover:text-blue-700">
+           Tenaga Kesehatan
+        </a>
+        <a routerLink="/anak-members" routerLinkActive="active"
+           class="font-medium text-gray-500 hover:text-blue-700">
+           Data Anak
+        </a>
+      </div>
+      <div *ngIf="(accountService.currentUser$ | async) === null" class="hidden md:block md:space-x-8">
         <a [routerLink]="['/home']" class="font-medium text-gray-500 hover:text-blue-700">Beranda</a>
         <a [routerLink]="['/home']" fragment="visi-kami" class="font-medium text-gray-500 hover:text-blue-700">Misi</a>
         <a [routerLink]="['/home']" fragment="layanan-kami"
@@ -19,6 +38,7 @@
         <a [routerLink]="['/home']" fragment="tentang-kami"
           class="font-medium text-gray-500 hover:text-blue-700">Tentang</a>
       </div>
+
       <div class="flex" [ngClass]="flexDir">
         <!-- If User Not Login -->
 
